# duckling2

./: Cargo.toml  README.md  README.zh.md  index.html  package.json
connector/: Cargo.toml  rustfmt.toml
connector/src/: utils.rs
connector/src/dialect/: ast.rs  mod.rs
connector/src/dialect/duckdb/: duckdb_sync.rs  mod.rs
connector/src/dialect/file/: mod.rs
connector/src/dialect/folder/: mod.rs
src/: Home.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  cmd.rs  main.rs
src/components/custom/: Icons.tsx
src/components/editor/: completion.ts
src/components/views/: DataViewToolbar.tsx  QueryView.tsx
src/pages/editor/: index.tsx
src/pages/settings/: AppSetting.tsx
src/pages/sidebar/: Favorite.tsx  SideToolbar.tsx  VerticalTabs.tsx  aside.tsx
src/pages/sidebar/dialog/: DatabaseDialog.tsx  LoadCsvFileDialog.tsx
src/sql/: languageSetup.ts
src/stores/: dbList.ts  tabs.ts
