[workspace]
members = ["src-tauri", "connector"]
resolver = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
async-trait = "^0.1"
anyhow = "^1"
arrow = { version = "^56", features = ["prettyprint", "csv"] }
chrono = "^0.4"
chrono-tz = "^0.8"
duckdb = { version = "1.4.4", features = [
    "extensions-full",
    "bundled",
] }
futures-util = "0.3"
glob = "^0.3"
itertools = "^0.14"
log = "^0.4"
parquet = "^56"
regex = "^1"
rust_decimal = "^1"
rust_xlsxwriter = "^0.93"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlparser = { version = "^0.61", features = ["json_example"] }
sqlformat = "^0.5"
time = "^0.3"
tokio = { version = "^1.49", features = ["macros", "test-util"] }
nanoid = "^0.4"
url = "^2.5"
uuid = { version = "^1.21", features = ["v4"] }
walkdir = "2"
