[package]
name = "connector"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "55"
arrow = { version = "^55", features = ["prettyprint", "csv"] }
duckdb = { version = "1.3.1", features = [
    "extensions-full",
    "bundled",
] }
futures-util = "0.3"
rust_decimal = { version = "1" }
anyhow = "1"
url = "^2.5.0"
nanoid = "0.4.0"
chrono = "^0.4"
chrono-tz = "^0.8"
async-trait = "^0.1"
time = "0.3.34"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.36.0", features = ["macros", "test-util"] }
sqlparser = { version = "0.57", features = ["json_example"] }
sqlformat = "0.3"
log = "^0.4"
glob = "*"
itertools = "*"
rust_xlsxwriter = "^0.89.1"
walkdir = "2"
regex = "*"
