[package]
name = "connector"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
duckdb = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
sqlparser = { workspace = true }
sqlformat = { workspace = true }
log = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
rust_xlsxwriter = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
