[package]
name = "duckling"
version = "0.1.0"
description = "DUCKLING"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.3.0", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "^2.10", features = [
    "devtools",
    "image-ico",
    "image-png",
    "tray-icon",
] }
# tauri plugin
tauri-plugin-shell = "^2.3.0"
tauri-plugin-dialog = "^2.3.0"
tauri-plugin-log = "^2.6.0"
tauri-plugin-process = "^2.3.0"
tauri-plugin-window-state = "^2.3.0"
tauri-plugin-clipboard-manager = "^2.3.0"
tauri-plugin-store = "^2.3.0"

log = { workspace = true }
url = { workspace = true }
sqlparser = { workspace = true }
sqlformat = { workspace = true }
connector = { path = "../connector" }
anyhow = { workspace = true }
regex = { workspace = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "^2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.
